--- a/public/index.html
+++ b/public/index.html
@@ -27,7 +27,7 @@
     -->
     <title>Информационный центр</title>
   </head>
-  <body style="background-color: #b7ccdc;">
+  <body style="background-color: #FFFFFF;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     
